<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
  <string name="community">Community</string>
  <string name="description">Description</string>
  <string name="ask_join_community">Do you want to join the Community \"%1$s\"?</string>
  <string name="community_set_name_explain">Set a name that other will recognize.</string>
  <string name="could_not_open_file">Could not open file</string>
    <string name="app_name">ArcaneChat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="or_separator">or</string>
    <string name="clear_search">Clear Search</string>
    <string name="link">Link</string>
    <string name="scan">Scan</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select">Select</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="def">Default</string>
    <string name="default_value">Default (%1$s)</string>
    <string name="default_value_as_above">Default (same as above)</string>
    <string name="custom">Custom</string>
    <string name="none">None</string>
    <string name="automatic">Automatic</string>
    <string name="strict">Strict</string>
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="open_attachment">Open Attachment</string>
    <string name="join">Join</string>
    <string name="rejoin">Rejoin</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="update">Update</string>
    <string name="emoji">Emoji</string>
    <string name="attachment">Attachment</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="close_window">Close Window</string>
    <string name="forward">Forward</string>
    <string name="create">Create</string>
    <string name="reset">Reset</string>
    <string name="later">Later</string>
    <string name="resend">Resend</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="mute">Mute</string>
    <string name="muted">Muted</string>
    <string name="ephemeral_messages">Disappearing Messages</string>
    <string name="ephemeral_messages_hint">Applies to all members of this chat if they use Delta Chat; they can still copy, save, and forward messages or use other e-mail clients.</string>
    <string name="save">Save</string>
    <string name="chat">Chat</string>
    <string name="media">Media</string>
    <string name="profile">Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="start_chat">Start Chat</string>
    <string name="show_full_message">Show Full Message…</string>
    <string name="mark_all_as_read">Mark All as Read</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_read_short">Mark Read</string>
    <string name="loading">Loading…</string>
    <string name="hide">Hide</string>
    <string name="activate">Activate</string>
    <string name="load_remote_content">Load Remote Images</string>
    <string name="load_remote_content_ask">Remote images can track you.\n\nThis setting also may load fonts and other content. If disabled, embedded or cached images may appear.\n\nLoad remote images?</string>
    <string name="always">Always</string>
    <string name="always_load_remote_images">Always Load Remote Images</string>
    <string name="once">Once</string>
    <string name="show_warning">Show Warning</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="not_now">Not now</string>
    <string name="never">Never</string>
    <string name="one_moment">One moment…</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="offline">Offline</string>
    <string name="next">Next</string>
    <string name="error">Error</string>
    <string name="error_x">Error: %1$s</string>
    <string name="no_app_to_handle_data">Can\'t find an app to handle this type of data.</string>
    <string name="no_browser_installed">No browser installed.</string>
    <string name="file_not_found">Could not find %1$s.</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="contacts_headline">Contacts</string>
    <string name="email_address">E-Mail Address</string>
    <string name="bad_email_address">Bad e-mail address.</string>
    <string name="password">Password</string>
    <string name="existing_password">Existing Password</string>
    <string name="now">Now</string>
    <string name="danger">Danger</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_seen_at">last seen at %1$s</string>
    <string name="last_seen_relative">last seen %1$s</string>
    <string name="last_seen_unknown">last seen: Unknown</string>
    <string name="online">online</string>
    <plurals name="n_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d min</item>
    </plurals>
    <plurals name="n_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="n_chats">
        <item quantity="one">%d chat</item>
        <item quantity="other">%d chats</item>
    </plurals>
    <plurals name="n_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <plurals name="n_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <plurals name="n_reactions">
        <item quantity="one">%d reaction</item>
        <item quantity="other">%d reactions</item>
    </plurals>
    <plurals name="n_members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <plurals name="n_recipients">
        <item quantity="one">%d recipient</item>
        <item quantity="other">%d recipients</item>
    </plurals>
    <plurals name="n_selected">
        <item quantity="one">%d Selected</item>
        <item quantity="other">%d Selected</item>
    </plurals>
    <string name="self">Me</string>
    <string name="draft">Draft</string>
    <string name="image">Image</string>
    <string name="reply_noun">Reply</string>
    <string name="gif">GIF</string>
    <string name="sticker">Sticker</string>
    <string name="add_to_sticker_collection">Add to Sticker Collection</string>
    <string name="add_stickers_instructions">To add stickers, tap "Open Sticker Folder", create a subfolder for your sticker pack, and drag image and sticker files there</string>
    <string name="open_sticker_folder">Open Sticker Folder</string>
    <string name="images">Images</string>
    <string name="audio">Audio</string>
    <string name="voice_message">Voice Message</string>
    <string name="forwarded">Forwarded</string>
    <string name="forwarded_message">Forwarded Message</string>
    <string name="forwarded_by">Forwarded by %1$s</string>
    <string name="video">Video</string>
    <string name="documents">Documents</string>
    <string name="contact">Contact</string>
    <string name="bot">bot</string>
    <string name="camera">Camera</string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="toggle_fullscreen">Toggle Full Screen Mode</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="gallery">Gallery</string>
    <string name="images_and_videos">Images and Videos</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="webxdc_app">App</string>
    <string name="webxdc_apps">Apps</string>
    <string name="webxdc_store_url">App Picker URL</string>
    <string name="webxdc_store_url_explain">If set, the URL will be used as the App Picker instead of the default one</string>
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="tools">Tools</string>
    <string name="app_size">Size</string>
    <string name="app_date_published">Published</string>
    <string name="add_to_chat">Add to Chat</string>
    <string name="unknown">Unknown</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="cyan">Cyan</string>
    <string name="purple">Purple</string>
    <string name="magenta">Magenta</string>
    <string name="white">White</string>
    <string name="pink">Pink</string>
    <string name="gray">Gray</string>
    <string name="zoom">Zoom</string>
    <string name="extra_small">Extra small</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra large</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="menu_new_contact">New Contact</string>
    <string name="menu_new_classic_contact">Add Contact Manually</string>
    <string name="new_classic_contact_explain">Manually added contacts can be used to text to classic e-mail and are not guaranteed end-to-end encrypted.</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_new_group">New Group</string>
    <string name="clone_chat">Clone Chat</string>
    <string name="broadcast_list">Broadcast List</string>
    <string name="broadcast_lists">Broadcast Lists</string>
    <string name="new_broadcast_list">New Broadcast List</string>
    <string name="add_recipients">Add Recipients</string>
    <string name="edit_broadcast_list">Edit Broadcast List</string>
    <string name="broadcast_list_name">Broadcast List Name</string>
    <string name="please_enter_broadcast_list_name">Please enter a name for the broadcast list.</string>
    <string name="menu_send">Send</string>
    <string name="menu_toggle_keyboard">Toggle Emoji Keyboard</string>
    <string name="menu_edit_group">Edit Group</string>
    <string name="menu_show_global_map">All Locations</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="menu_all_media">All Media</string>
    <string name="menu_settings">Settings</string>
    <string name="public_bots">🤖 Public Bots</string>
    <string name="manual_account_setup_option">Classic E-Mail Login</string>
    <string name="instant_onboarding_create">Agree &amp; Create Profile</string>
    <string name="instant_onboarding_other_server">List Chatmail Servers</string>
    <string name="scan_invitation_code">Scan Invitation Code</string>
    <string name="proxy_settings">Proxy</string>
    <string name="pref_profile_photo">Profile Image</string>
    <string name="pref_your_name">Your Name</string>
    <string name="pref_enter_sends">Enter Key Sends</string>
    <string name="pref_enter_sends_explain">Pressing the Enter key will send text messages</string>
    <string name="pref_outgoing_media_quality">Outgoing Media Quality</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_backup_explain">Back Up Chats to External Storage</string>
    <string name="auto_download_messages">Auto-Download Messages</string>
    <string name="qr_code">QR Code</string>
    <string name="set_name_and_avatar_explain">Set a name that your contacts will recognize. You can also set a profile image.</string>
</resources>