<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/qr_code"
          android:id="@+id/menu_qr"
          android:icon="@drawable/baseline_qr_code_24"
          app:showAsAction="ifRoom"/>

    <item android:title="@string/invite_friends"
          android:id="@+id/menu_invite_friends" />

    <item android:title="@string/menu_all_media"
        android:id="@+id/menu_all_media" />

    <item android:title="@string/menu_show_global_map"
        android:id="@+id/menu_global_map"
        android:visible="false"
        />

    <item android:title="@string/proxy_settings"
        android:id="@+id/menu_proxy_settings"
        android:icon="@drawable/baseline_proxy_24"
        app:showAsAction="always"
        android:visible="false"
        />

    <item android:title="@string/menu_settings"
          android:id="@+id/menu_settings" />

    <group android:id="@+id/extra_services" >

      <item android:title="@string/webxdc_apps_store"
            android:id="@+id/menu_webxdc_apps_store" />
      <item android:title="@string/public_bots"
            android:id="@+id/menu_public_bots" />

    </group>

</menu>
