<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_enter_sends"
        android:summary="@string/pref_enter_sends_explain"
        android:title="@string/pref_enter_sends"/>

    <ListPreference
        android:key="pref_compression"
        android:title="@string/pref_outgoing_media_quality"
        android:dependency="pref_compression"
        android:entries="@array/pref_compression_entries"
        android:entryValues="@array/pref_compression_values"
        android:defaultValue="0" />

    <ListPreference
        android:key="auto_download"
        android:title="@string/auto_download_messages"
        android:entries="@array/pref_download_limit_entries"
        android:entryValues="@array/pref_download_limit_values"/>

    <PreferenceCategory android:title="@string/pref_backup">
        <Preference android:key="pref_backup"
            android:title="@string/pref_backup_explain"/>
    </PreferenceCategory>

</PreferenceScreen>
