<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:layout_marginTop="20dp"
      android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

      <ImageView android:id="@+id/avatar"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:contentDescription="@string/pref_profile_photo"
                 android:transitionName="avatar"/>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pref_your_name"
            android:inputType="textCapWords" />
      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/information_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/set_name_and_avatar_explain"
        android:textColor="@color/gray50" />

    <TextView
        android:id="@+id/privacy_policy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"/>

    <Button
        style="@style/ButtonPrimary"
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/instant_onboarding_create"/>

    <LinearLayout
        android:id="@+id/or_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

      <View
          android:layout_width="wrap_content"
          android:layout_height="1dp"
          android:layout_weight="1"
          android:background="@drawable/divider_start"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
          android:layout_weight="0"
          android:gravity="center"
          android:text="@string/or_separator"
          android:textSize="14sp"
          android:fontFamily="sans-serif"
          android:textColor="@color/gray50"/>

      <View
          android:layout_width="wrap_content"
          android:layout_height="1dp"
          android:layout_weight="1"
          android:background="@drawable/divider_end"/>
    </LinearLayout>

    <Button
        style="@style/ButtonSecondary"
        android:id="@+id/use_other_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/instant_onboarding_other_server"/>

    <Button
        style="@style/ButtonSecondary"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/manual_account_setup_option"/>

    <Button
        style="@style/ButtonSecondary"
        android:id="@+id/scan_qr_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/scan_invitation_code"/>

  </LinearLayout>

</FrameLayout>
